ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/TupleTypes/TupleType4/input.ts.stderr
error: Unexpected eof
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/TupleTypes/TupleType4/input.ts:1:9
  |
1 | var v: [
  |         ^

